--- a/styles/base/_grid.scss
+++ b/styles/base/_grid.scss
@@ -2,16 +2,19 @@
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: auto;
-    height: 100%;
+    min-height: 100%;
     justify-items: start;
     align-items: center;
-
+    
     &--center {
         width: 90%;
         margin: 0 auto;
         justify-items: center;
     }
 
+    &--min-content {
+        grid-template-rows: min-content;
+    }
 }
 
 
