--- a/styles/abstracts/_placeholders.scss
+++ b/styles/abstracts/_placeholders.scss
@@ -4,6 +4,13 @@
     justify-content: center;
 }
 
+%absolute-center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 %ribbon {
     content: '';
     position: absolute;
