--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -25,3 +25,10 @@ header, section {
     width: 100%;
     background: $color-primary-dark;
 }
+
+
+@media (max-width: 900px) {
+    body {
+        font-size: 75%;
+    }
+}
