--- a/app/_components/cardTestimonial/card-testimonial.scss
+++ b/app/_components/cardTestimonial/card-testimonial.scss
@@ -1,42 +1,12 @@
 .card-testimonial {
-    width: 100%;
-    height: 100%;
+    width: 98%;
+    height: 98%;
+    flex-shrink: 0;
+    flex-grow: 0;
     position: relative;
     cursor: pointer;
     @extend %flex-center;
-
-    &::before {
-        content: '';
-        position: absolute;
-        width: 50%;
-        height: 50%;
-        top: -10%;
-        left: -10%;
-        border-radius: 50%;
-        background: $color-primary-dark-2;
-        transition: all .5s;
-    }
-    
-    &::after {
-        content: '';
-        position: absolute;
-        width: 50%;
-        height: 50%;
-        bottom: -10%;
-        right: -10%;
-        border-radius: 50%;
-        background: $color-primary-dark-2;
-        transition: all .5s;
-    }
-
-
-    &:hover::before {
-        transform: translate(100%, 150%);
-    }
-    
-    &:hover::after {
-        transform: translate(-100%, -150%);
-    }
+    margin: 0 1%;
 
     .content {
         width: 100%;
@@ -111,16 +81,17 @@
 
 
             img {
+                margin-top: .5rem;
                 border-radius: 50%;
-                width: 12rem;
-                height: 12rem;
+                width: 10rem;
+                height: 10rem;
                 outline: 3px solid $color-primary-dark;
                 transition: all .5s;    
                 cursor: default;
             }
 
             figcaption {
-                padding-top: 1rem;
+                padding-top: .5rem;
                 text-align: center;
                 font-size: 1.2rem;
 
