--- a/app/_components/testimonial/testimonial.scss
+++ b/app/_components/testimonial/testimonial.scss
@@ -1,1 +1,118 @@
+.testimonial {
+
+    &__container {
+        position: relative;
+        display: flex; 
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    &__content {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        // background: red;
+
+        &-visible {
+            width: 100%;
+            height: 100%;
+            max-width: 350px;
+            max-height: 480px;
+            overflow: hidden;
+        }
+
+        &-cards {
+            display: flex;
+            transition: $transition-default;
+        }
+
+        &::before {
+            content: '';
+            position: absolute;
+            top: -2rem;
+            width: 8rem;
+            height: 8rem;
+            background-color: $color-primary-dark-2;
+            transition: $transition-default;
+            transform: rotate(30deg);
+        }
+
+        &:hover::before {
+            transform: rotate(198deg);
+            border-radius: 50%;
+        }
+    }
+
+    &__side-control {
+        width: 3rem;
+        height: 35rem;
+        color: $color-primary-dark;
+        background: rgba(255, 255, 255, .1);
+        backdrop-filter: blur(.5rem);
+        -webkit-backdrop-filter: blur(.5rem);   
+        cursor: pointer;
+        transition: all $duration $easing;
+        
+        &:hover {
+            height: 40rem;
+            background: rgba(255, 255, 255, .2);
+        }
+        
+        svg {
+            height: 2.5rem;
+            width: 2.5rem;
+            transition: inherit;
+        }
+        
+        &--prev{
+            border-radius: 1.6rem 0 0 1.6rem;
+        }
+        
+        &--next {
+            border-radius:  0 1.6rem 1.6rem 0;
+        }
+    }
+
+    &__controls {
+    
+        width: max-content;
+        height: 3rem;
+        border: .3rem solid $color-primary-dark-2;
+        border-radius: 5rem;
+        margin: 1rem auto;
+        @extend %flex-center;
+        padding: 0 .4rem;
+        
+        &-option {
+            width: 2rem;
+            height: 2rem;
+            cursor: pointer;
+            margin: 0 .2rem;
+            transition: $transition-default;
+            background: none;
+            @extend %flex-center;
+    
+            & > * {
+                color: $color-primary-dark-2;
+                height: 100%;
+                width: 100%;
+                transition: $transition-default;
+            }
+            
+            &:hover > * {
+                color: $color-secondary-dark;
+            }
+    
+            &--active {
+                color: $color-secondary-dark;
+            }
+        }
+        
+    }
+    
+}
+
 
